[metadata]
name = pylttoaine
description = polttoaine.info API client
long_description = file:README.md
long_description_content_type = text/markdown
author = Ville Skyttä
author_email = ville.skytta@iki.fi
url = https://github.com/scop/pylttoaine
license = Apache License 2.0
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
project_urls =
    Changelog = https://github.com/scop/pylttoaine/blob/main/CHANGELOG.md

[options]
python_requires = >=3.8
install_requires =
    aiohttp ~=3.4
    backports.zoneinfo ~=0.2; python_version <"3.9"
package_dir =
    = src
packages = find:
[options.packages.find]
where = src
[options.package_data]
pylttoaine = py.typed
[options.entry_points]
console_scripts =
    pylttoaine = pylttoaine.__main__:main

[flake8]
# D202,E203,E501 conflict with/handled by black
extend-ignore = D202,E203,E501,S101

[isort]
profile = black

[mypy]
python_version = 3.8
mypy_path = $MYPY_CONFIG_FILE_DIR/src
show_error_codes = True
strict = True
disallow_any_unimported = True
#disallow_any_expr = True  # too much for now
disallow_any_decorated = True
disallow_any_explicit = True
warn_unreachable = True

[pylint.MASTER]
jobs = 2
load-plugins = pylint_strict_informational
persistent = no
py-version = 3.8
[pylint.MESSAGES CONTROL]
disable =
    duplicate-code,  # examples, https://github.com/PyCQA/pylint/issues/214
    fixme,
    format, # handled by black
    missing-class-docstring, # handled by pydocstyle
    missing-function-docstring, # handled by pydocstyle
    missing-module-docstring, # handled by pydocstyle
    wrong-import-order, # handled by isort
enable =
    use-symbolic-message-instead,
    useless-suppression,
[pylint.REPORTS]
score = no

[tox:tox]
envlist = py38, py39, py310, pyston3  # , pypy3 omitted until there's a 3.8
skip_missing_interpreters = true
[testenv]
deps = -rrequirements-test.txt
commands =
    {envpython} -X dev -bb -m pytest {posargs}
[testenv:pyston3]
basepython = pyston3
[gh-actions]  # tox-gh-actions
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    pypy-3.8: pypy3
