[metadata]
name = pylttoaine
description = polttoaine.info API client
long_description = file:README.md
long_description_content_type = text/markdown
author = Ville Skyttä
author_email = ville.skytta@iki.fi
url = https://github.com/scop/pylttoaine
license = Apache License 2.0
license_files = LICENSE
classifier =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
project_urls =
    Changelog = https://github.com/scop/pylttoaine/blob/main/CHANGELOG.md

[options]
python_requires = >=3.8
install_requires =
    aiohttp ~=3.4
    backports.zoneinfo ~=0.2; python_version <"3.9"
package_dir =
    = src
packages = find:
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    pylttoaine = pylttoaine.__main__:main

[flake8]
# D202,E203,E501 conflict with/handled by black
extend-ignore = D202,E203,E501,S101
